tests/parsing/smtlib/v2.6/errors/011_exists_bad_var_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/011_exists_bad_var_list_1.smt2", line 2, character 16-17:
2 | (assert (exists _ true))
                    ^
Error while parsing a term, read the reserved word '_',
      but expected a list of sorted variables, starting with an opening
      parenthesis.
